@@ -40,7 +40,7 @@ static char* replace_vars( CustomElement* el, char* value, char* xvalue );
 static void fill_buffer_from_file( CustomElement* el, GtkTextBuffer* buf,
                                    char* path, gboolean watch );
 static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
-                                                            FILE* out );
+                                            FILE* out, gboolean is_cancel );
 static gboolean destroy_dlg( GtkWidget* dlg );
 static void on_button_clicked( GtkButton *button, CustomElement* el );
 void on_combo_changed( GtkComboBox* box, CustomElement* el );
@@ -643,7 +643,8 @@ GList* args_from_file( const char* path )
         strtok( line, "\r\n" );
         if ( !strcmp( line, "--" ) )
             break;
-        args = g_list_prepend( args, g_strdup( line ) );
+        if ( line[0] != '\n' )  // skip blank lines
+            args = g_list_prepend( args, g_strdup( line ) );
     }
     fclose( file );
     return ( args = g_list_reverse( args ) );
@@ -794,22 +795,24 @@ static void set_element_value( CustomElement* el, const char* name,
     case CDLG_INPUT:
     case CDLG_INPUT_LARGE:
     case CDLG_PASSWORD:
+        // remove linefeeds
+        str = replace_string( value, "\n", "", FALSE );
         if ( el_name->type == CDLG_INPUT_LARGE )
         {
             gtk_text_buffer_set_text( gtk_text_view_get_buffer( 
                                 GTK_TEXT_VIEW( el_name->widgets->next->data ) ),
-                                value, -1 );
+                                str, -1 );
             multi_input_select_region( el_name->widgets->next->data, 0, -1 );
         }
         else
         {
-            gtk_entry_set_text( GTK_ENTRY( el_name->widgets->next->data ), value );
+            gtk_entry_set_text( GTK_ENTRY( el_name->widgets->next->data ), str );
             gtk_editable_select_region( 
                                 GTK_EDITABLE( el_name->widgets->next->data ),
                                 0, -1 );                    
         }
         g_free( el_name->val );
-        el_name->val = g_strdup( value );
+        el_name->val = str;
         break;
     case CDLG_VIEWER:
     case CDLG_EDITOR:
@@ -1378,10 +1381,11 @@ static void internal_command( CustomElement* el, int icmd, GList* args, char* xv
     switch ( icmd )
     {
     case CMD_CLOSE:
-        write_source( el->widgets->data, NULL, stdout );
+        write_source( el->widgets->data, NULL, stdout, TRUE );
         g_idle_add( (GSourceFunc)destroy_dlg, el->widgets->data );
         break;
     case CMD_SET:
+    
         set_element_value( el, cname, cvalue );
         break;
     case CMD_PRESS:
@@ -1460,7 +1464,7 @@ static void internal_command( CustomElement* el, int icmd, GList* args, char* xv
                                                         g_strerror( errno ) );
             break;
         }
-        write_source( el->widgets->data, NULL, out );
+        write_source( el->widgets->data, NULL, out, FALSE );
         if ( out != stderr )
             fclose( out );
         break;
@@ -1988,7 +1992,7 @@ static void write_value( FILE* file, const char* prefix, const char* name,
 }
 
 static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
-                                                            FILE* out )
+                                            FILE* out, gboolean is_cancel )
 {
     GList* l;
     CustomElement* el;
@@ -1997,7 +2001,6 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
     int width, height, pad = -1;
     
     GList* elements = (GList*)g_object_get_data( G_OBJECT( dlg ), "elements" );
-
 
     // get custom prefix
     for ( l = elements; l; l = l->next )
@@ -2092,7 +2095,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
             else
                 // do not free
                 str = (char*)gtk_entry_get_text( GTK_ENTRY( el->widgets->next->data ) );
-            if ( el->args && ((char*)el->args->data)[0] == '@' )
+            if ( !is_cancel && el->args && ((char*)el->args->data)[0] == '@' )
             {
                 // save file
                 // skip detection of updates while saving file
@@ -2113,7 +2116,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
         case CDLG_VIEWER:
         case CDLG_EDITOR:
             write_value( out, prefix, el->name, NULL, el->val );
-            if ( el->args && el->args->next )
+            if ( !is_cancel && el->args && el->args->next )
             {
                 // save file
                 write_value( out, prefix, el->name, "saved",
@@ -2139,7 +2142,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
                                                 el->widgets->next->data ) ) ?
                                                 "1" : "0" );
             // save file
-            if ( el->args && el->args->next 
+            if ( !is_cancel && el->args && el->args->next 
                                     && ((char*)el->args->next->data)[0] == '@' )
             {
                 write_file_value( (char*)el->args->next->data + 1, 
@@ -2156,7 +2159,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
             str = gtk_combo_box_text_get_active_text( 
                                 GTK_COMBO_BOX_TEXT( el->widgets->next->data ) );
             write_value( out, prefix, el->name, NULL, str );
-            if ( el->def_val && el->def_val[0] == '@' )
+            if ( !is_cancel && el->def_val && el->def_val[0] == '@' )
             {
                 // save file
                 write_file_value( el->def_val + 1, str );
@@ -2240,7 +2243,7 @@ static void write_source( GtkWidget* dlg, CustomElement* el_pressed,
             str = gtk_file_chooser_get_current_folder( GTK_FILE_CHOOSER ( 
                                                     el->widgets->next->data ) );
             write_value( out, prefix, el->name, "dir", str );
-            if ( el->args && ((char*)el->args->data)[0] == '@' )
+            if ( !is_cancel && el->args && ((char*)el->args->data)[0] == '@' )
             {
                 // save file
                 write_value( out, prefix, el->name, "saved",
@@ -2279,7 +2282,7 @@ static gboolean on_timeout_timer( CustomElement* el )
     el->option--;
     if ( el->option <= 0 )
     {
-        write_source( el->widgets->data, el, stdout );
+        write_source( el->widgets->data, el, stdout, FALSE );
         g_idle_add( (GSourceFunc)destroy_dlg, el->widgets->data );
         return FALSE;
     }
@@ -2427,7 +2430,8 @@ static void on_button_clicked( GtkButton *button, CustomElement* el )
     else
     {
         // no command
-        write_source( el->widgets->data, el, stdout );
+        write_source( el->widgets->data, el, stdout,
+                                        !g_strcmp0( el->val, "cancel" ) );
         g_idle_add( (GSourceFunc)destroy_dlg, el->widgets->data );
     }
 }
@@ -2477,7 +2481,7 @@ gboolean on_window_delete( GtkWidget *widget, GdkEvent  *event, CustomElement* e
         return TRUE;
     }
     // close window
-    write_source( widget, NULL, stdout );
+    write_source( widget, NULL, stdout, TRUE );
     destroy_dlg( widget );
     return FALSE;
 }
@@ -3742,7 +3746,7 @@ void signal_handler()
 {
     if ( signal_dialog )
     {
-        write_source( signal_dialog, NULL, stdout );
+        write_source( signal_dialog, NULL, stdout, TRUE );
         destroy_dlg( signal_dialog );
     }
 }
